adds songs list and song create

--- a/ui/rl/tsconfig.json
+++ b/ui/rl/tsconfig.json
@@ -6,11 +6,17 @@
       "auth": [
         "dist/auth"
       ],
+      "backend-api": [
+        "dist/backend-api"
+      ],
       "show": [
         "dist/show"
       ],
       "song": [
         "dist/song"
+      ],
+      "song-search": [
+        "dist/song-search"
       ]
     },
     "baseUrl": "./",
