--- a/ui/rl/angular.json
+++ b/ui/rl/angular.json
@@ -197,6 +197,68 @@
           }
         }
       }
+    },
+    "backend-api": {
+      "projectType": "library",
+      "root": "projects/backend-api",
+      "sourceRoot": "projects/backend-api/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/backend-api/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/backend-api/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/backend-api/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/backend-api/src/test.ts",
+            "tsConfig": "projects/backend-api/tsconfig.spec.json",
+            "karmaConfig": "projects/backend-api/karma.conf.js"
+          }
+        }
+      }
+    },
+    "song-search": {
+      "projectType": "library",
+      "root": "projects/song-search",
+      "sourceRoot": "projects/song-search/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/song-search/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/song-search/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/song-search/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/song-search/src/test.ts",
+            "tsConfig": "projects/song-search/tsconfig.spec.json",
+            "karmaConfig": "projects/song-search/karma.conf.js"
+          }
+        }
+      }
     }
   }
 }
