--- a/ui/rl/angular.json
+++ b/ui/rl/angular.json
@@ -259,6 +259,37 @@
           }
         }
       }
+    },
+    "@ui/button-list": {
+      "projectType": "library",
+      "root": "projects/ui/button-list",
+      "sourceRoot": "projects/ui/button-list/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/ui/button-list/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ui/button-list/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/ui/button-list/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ui/button-list/src/test.ts",
+            "tsConfig": "projects/ui/button-list/tsconfig.spec.json",
+            "karmaConfig": "projects/ui/button-list/karma.conf.js"
+          }
+        }
+      }
     }
   }
 }
