--- a/ui/rl/angular.json
+++ b/ui/rl/angular.json
@@ -76,10 +76,7 @@
               "browserTarget": "rl:build:development"
             }
           },
-          "defaultConfiguration": "development",
-          "options": {
-            "proxyConfig": "proxy.conf.json"
-          }
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
