adds snackbar notifications and erros, modifies list of shows, implements fast add-race-to-current-show button

--- a/ui/rl/package.json
+++ b/ui/rl/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
+    "start:dev": "ng serve --watch",
     "build": "ng build",
     "build:raspberry": "ng build --deploy-url /rl",
     "watch": "ng build --watch --configuration development",
