--- a/ui/rl/tsconfig.json
+++ b/ui/rl/tsconfig.json
@@ -23,6 +23,9 @@
       ],
       "song-search": [
         "dist/song-search"
+      ],
+      "views": [
+        "dist/views"
       ]
     },
     "baseUrl": "./",
