adds warning for list being full on create-race page

--- a/ui/rl/tsconfig.json
+++ b/ui/rl/tsconfig.json
@@ -6,6 +6,9 @@
       "@ui/button-list": [
         "dist/ui/button-list"
       ],
+      "@ui/message": [
+        "dist/ui/message"
+      ],
       "@ui/yes-no-dialog": [
         "dist/ui/yes-no-dialog"
       ],
