--- a/ui/rl/angular.json
+++ b/ui/rl/angular.json
@@ -70,10 +70,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "rl:build:production"
+              "buildTarget": "rl:build:production"
             },
             "development": {
-              "browserTarget": "rl:build:development"
+              "buildTarget": "rl:build:development"
             }
           },
           "defaultConfiguration": "development",
@@ -84,7 +84,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "rl:build"
+            "buildTarget": "rl:build"
           }
         },
         "test": {
