--- a/ui/rl/package.json
+++ b/ui/rl/package.json
@@ -12,7 +12,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular-material-components/datetime-picker": "^8.0.0",
+    "@angular-material-components/datetime-picker": "16.0.1",
     "@angular/animations": "^17.3.11",
     "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.11",
@@ -24,10 +24,10 @@
     "@angular/platform-browser-dynamic": "^17.3.11",
     "@angular/router": "^17.3.11",
     "fastest-levenshtein": "^1.0.16",
-    "material-icons": "^1.13.12",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.7"
+    "material-icons": "*",
+    "rxjs": "^7.8.1",
+    "tslib": "^2.6.3",
+    "zone.js": "^0.14.7"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.8",
