--- a/be/package.json
+++ b/be/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
@@ -30,7 +31,8 @@
     "axios": "^1.7.2",
     "prisma": "^5.2.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "webdav": "^5.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
