--- a/ui/rl/package.json
+++ b/ui/rl/package.json
@@ -5,14 +5,15 @@
     "ng": "ng",
     "start": "ng serve",
     "start:dev": "ng serve --watch",
+    "lint:fix": "ng lint --fix",
     "build": "ng build",
     "build:raspberry": "ng build --deploy-url /rl",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
-    "@angular-material-components/datetime-picker": "16.0.1",
     "@angular/animations": "^17.3.11",
     "@angular/cdk": "^17.3.10",
     "@angular/common": "^17.3.11",
@@ -31,9 +32,17 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.8",
+    "@angular-eslint/builder": "17.5.2",
+    "@angular-eslint/eslint-plugin": "17.5.2",
+    "@angular-eslint/eslint-plugin-template": "17.5.2",
+    "@angular-eslint/schematics": "17.5.2",
+    "@angular-eslint/template-parser": "17.5.2",
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.11",
     "@types/jasmine": "~4.0.0",
+    "@typescript-eslint/eslint-plugin": "7.11.0",
+    "@typescript-eslint/parser": "7.11.0",
+    "eslint": "^8.57.0",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
