--- a/ui/rl/tsconfig.json
+++ b/ui/rl/tsconfig.json
@@ -66,10 +66,10 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
-    "module": "es2020",
+    "target": "ES2022",
+    "module": "ES2022",
     "lib": [
-      "es2020",
+      "es2021.intl",
       "dom"
     ]
   },
