Make Versions flexible

--- a/ui/rl/package.json
+++ b/ui/rl/package.json
@@ -32,11 +32,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.8",
-    "@angular-eslint/builder": "17.5.2",
-    "@angular-eslint/eslint-plugin": "17.5.2",
-    "@angular-eslint/eslint-plugin-template": "17.5.2",
-    "@angular-eslint/schematics": "17.5.2",
-    "@angular-eslint/template-parser": "17.5.2",
+    "@angular-eslint/builder": "*",
+    "@angular-eslint/eslint-plugin": "*",
+    "@angular-eslint/eslint-plugin-template": "*",
+    "@angular-eslint/schematics": "*",
+    "@angular-eslint/template-parser": "*",
     "@angular/cli": "^17.3.8",
     "@angular/compiler-cli": "^17.3.11",
     "@types/jasmine": "~4.0.0",
