--- a/ui/rl/package.json
+++ b/ui/rl/package.json
@@ -32,11 +32,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^18.2.6",
-    "@angular-eslint/builder": "*",
-    "@angular-eslint/eslint-plugin": "*",
-    "@angular-eslint/eslint-plugin-template": "*",
-    "@angular-eslint/schematics": "*",
-    "@angular-eslint/template-parser": "*",
+    "@angular-eslint/builder": "18.3.1",
+    "@angular-eslint/eslint-plugin": "18.3.1",
+    "@angular-eslint/eslint-plugin-template": "18.3.1",
+    "@angular-eslint/schematics": "18.3.1",
+    "@angular-eslint/template-parser": "18.3.1",
     "@angular/cli": "^18.2.6",
     "@angular/compiler-cli": "^18.2.6",
     "@types/jasmine": "~4.0.0",
