--- a/be/package.json
+++ b/be/package.json
@@ -32,6 +32,7 @@
     "prisma": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "usb": "^2.14.0",
     "webdav": "^5.6.0"
   },
   "devDependencies": {
