create be for users

--- a/ui/rl/tsconfig.json
+++ b/ui/rl/tsconfig.json
@@ -45,6 +45,9 @@
       "song-search": [
         "dist/song-search"
       ],
+      "users": [
+        "./dist/users"
+      ],
       "video-player": [
         "dist/video-player"
       ],
